--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Компания Stone Craft в Джалал-Абад, Кыргызстан. Производство и экспорт высококачественных мраморных плиток и травертина в страны СНГ.">
-  <meta name="keywords" content="мраморные плитки, травертин, Кыргызстан, Джалал-Абад, экспорт, СНГ, строительство, отделка">
-  <title>Stone Craft - Производство мраморных плиток и травертина</title>
-  <link rel="stylesheet" href="HomeSection.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Производство высококачественных изделий из мрамора и травертина в Кыргызстане. Craft Stone - лидер в СНГ.">
+    <meta name="keywords" content="мрамор, травертин, производство, Кыргызстан, мраморные изделия, травертиновые изделия">
+    <title>Craft Stone - Производство мрамора и травертина</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/marble-tile-factory/src/components/assets/CraftStoe.png" type="image/x-icon">
 </head>
 <body>
-  <!-- Your React app will be injected here -->
   <div id="root"></div>
-  <script src="path/to/your/bundle.js"></script>
 </body>
 </html>
